[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/other/fake_token.gd" type="Script" id=1]
[ext_resource path="res://images/excuses/en/desertedisland.png" type="Texture" id=2]
[ext_resource path="res://images/excuses/es/desertedisland.png" type="Texture" id=3]
[ext_resource path="res://images/excuses/en/plantshavefeelings.png" type="Texture" id=4]
[ext_resource path="res://images/excuses/es/plantshavefeelings.png" type="Texture" id=5]
[ext_resource path="res://images/excuses/circle.png" type="Texture" id=6]
[ext_resource path="res://fonts/token.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://animations/token.tres" type="Animation" id=8]

[sub_resource type="DynamicFont" id=1]

size = 65
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "merge"
length = 0.1
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "level_up"
} ]
}

[node name="fake_token" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="token" type="Node2D" parent="."]

[node name="sprite_1_en" type="Sprite" parent="token"]
texture = ExtResource( 2 )

[node name="sprite_1_es" type="Sprite" parent="token"]
visible = false
texture = ExtResource( 3 )
_sections_unfolded = [ "texture" ]

[node name="sprite_2_en" type="Sprite" parent="token"]
visible = false
texture = ExtResource( 4 )

[node name="sprite_2_es" type="Sprite" parent="token"]
visible = false
texture = ExtResource( 5 )
_sections_unfolded = [ "texture" ]

[node name="circle1" type="Sprite" parent="token"]
editor/display_folded = true
position = Vector2( -114.737, 117.895 )
texture = ExtResource( 6 )

[node name="number" type="Label" parent="token/circle1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -75.0
margin_right = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_fonts/font" ]

[node name="circle2" type="Sprite" parent="token"]
visible = false
position = Vector2( -114.737, 117.895 )
texture = ExtResource( 6 )

[node name="number" type="Label" parent="token/circle2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -75.0
margin_right = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
align = 1
valign = 1
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_fonts/font" ]

[node name="animation" type="AnimationPlayer" parent="token"]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/merge = SubResource( 2 )
anims/spawn = ExtResource( 8 )
blend_times = [  ]

